Reworking integration